Changes for version 0.9.20
-------------------------
	* Crash fix for SmartCardManager
	* Crash fix in asnCertificate::getSubjectAltName, with missing altname
	* T0 workaround some win built-in PCSC drivers
	* CTAPI crash fixes for reader removal
	* further cardlib code cleanup

Changes for version 0.9.19
-------------------------
	* Cardlib bugfixes
	* Crash fix in PSCSManager when readers were removed
	* unified SmartCardManager added
	* test projects created for Win
	* Cardlib speedup ( less APDUs transmitted )
	* compilation fix for upcoming GCC-4.4+openssl ( debian #505420 )
	* general code warnings cleanup
	* premake buildscripts added

Changes for version 0.9.18
-------------------------
	* more packaging changes
	* binary and package changed from EsteidUtil to esteidutil

Changes for version 0.9.17
-------------------------
	* packaging changes for debian

Changes for version 0.9.16
-------------------------
	* Russian translation updates
	* Fix bug for CTAPI pin change ( undo last update damage )
	* Cert expiry check fixed

Changes for version 0.9.15
-------------------------
	* CTAPI port setting fixed with multiple readers
	* duplicate CTAPI reader instances display removed
	* PIN retry counting fixed up for CTAPI
	* some corner case error situations handled better
	* warning when certificates are about to expire

Changes for version 0.9.14
-------------------------
	* fixed bug "carderror 0x64 0xA2" with CTAPI
	* add card command logging with --verbose option
	* fix CTAPI comms for SPR532 reader
	* fix release packaging for Windows and Mac

Changes for version 0.9.13
-------------------------
	* Mac compilation fixes
	* cardlib reconnect fixed
	* PCSC manager works with preconnected handles
	* CTAPI interface fixed to work with OpenCT
	* fix locating openssl libs for image download

Changes for version 0.9.12
-------------------------
	* Card library fixes and cleanup
	* one more registry read error fix
	* spec file for Mandriva
