@@ -1,114 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<CodeBlocks_project_file>
-	<FileVersion major="1" minor="6" />
-	<Project>
-		<Option title="EsteidUtil" />
-		<Option pch_mode="2" />
-		<Option compiler="gcc" />
-		<Build>
-			<Target title="Debug">
-				<Option output="EsteidUtil" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-W" />
-					<Add option="-g" />
-					<Add option="-O0" />
-					<Add option="-D_DEBUG" />
-					<Add option="-D__WXGTK__" />
-					<Add directory="/usr/lib/wx/include/gtk2-unicode-debug-2.8/" />
-					<Add directory="/usr/include/wx-2.8/" />
-					<Add directory="/usr/include/PCSC/" />
-					<Add directory="/home/kaido/progs/wxEsteidUtil/trunk/src/" />
-					<Add directory="/home/kaido/Projects/wxE/src/" />
-				</Compiler>
-				<Linker>
-					<Add library="wx_baseud-2.8" />
-					<Add library="wx_gtk2ud_core-2.8" />
-					<Add library="wx_gtk2ud_adv-2.8" />
-					<Add library="wx_gtk2ud_html-2.8" />
-				</Linker>
-			</Target>
-			<Target title="Release">
-				<Option output="EsteidUtil" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Release" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-W" />
-					<Add option="-DNDEBUG" />
-					<Add option="-D__WXGTK__" />
-					<Add directory="/usr/lib/wx/include/gtk2-ansi-release-2.8/" />
-					<Add directory="/usr/include/wx-2.8/" />
-					<Add directory="/usr/include/PCSC/" />
-					<Add directory="/home/kaido/progs/wxEsteidUtil/trunk/src/" />
-					<Add directory="/home/kaido/Projects/wxE/src/" />
-				</Compiler>
-				<Linker>
-					<Add library="wx_base-2.8" />
-					<Add library="wx_gtk2_core-2.8" />
-					<Add library="wx_gtk2_adv-2.8" />
-					<Add library="wx_gtk2_html-2.8" />
-				</Linker>
-			</Target>
-		</Build>
-		<Unit filename="AppSetting.cpp" />
-		<Unit filename="AppSetting.h" />
-		<Unit filename="CertificateDialog.cpp" />
-		<Unit filename="CertificateDialog.h" />
-		<Unit filename="DiagnosticsDialog.cpp" />
-		<Unit filename="DiagnosticsDialog.h" />
-		<Unit filename="EsteidUtil.cpp" />
-		<Unit filename="MainDialog.cpp" />
-		<Unit filename="MainDialog.h" />
-		<Unit filename="MainDialog_2.cpp" />
-		<Unit filename="MainDialog_Image.cpp" />
-		<Unit filename="MainDialog_Pin.cpp" />
-		<Unit filename="PersonalDataDialog.cpp" />
-		<Unit filename="PersonalDataDialog.h" />
-		<Unit filename="PinChangeDialog.cpp" />
-		<Unit filename="PinChangeDialog.h" />
-		<Unit filename="PinChangeSecureDialog.cpp" />
-		<Unit filename="PinChangeSecureDialog.h" />
-		<Unit filename="PinDialog.cpp" />
-		<Unit filename="Setup.h" />
-		<Unit filename="cardlib/CTAPIManager.cpp" />
-		<Unit filename="cardlib/CTAPIManager.h" />
-		<Unit filename="cardlib/CardBase.cpp" />
-		<Unit filename="cardlib/CardBase.h" />
-		<Unit filename="cardlib/DynamicLibrary.cpp" />
-		<Unit filename="cardlib/DynamicLibrary.h" />
-		<Unit filename="cardlib/EstEidCard.cpp" />
-		<Unit filename="cardlib/EstEidCard.h" />
-		<Unit filename="cardlib/ManagerInterface.h" />
-		<Unit filename="cardlib/PCSCManager.cpp" />
-		<Unit filename="cardlib/PCSCManager.h" />
-		<Unit filename="cardlib/SCError.cpp" />
-		<Unit filename="cardlib/SCError.h" />
-		<Unit filename="cardlib/helperMacro.h" />
-		<Unit filename="precompiled.h" />
-		<Unit filename="resource.h" />
-		<Unit filename="resources/digistampbmp.gif" />
-		<Unit filename="resources/esteid.ico" />
-		<Unit filename="resources/esteidbmp.gif" />
-		<Unit filename="resources/logo_grey.ico" />
-		<Unit filename="resources/logo_sk.ico" />
-		<Unit filename="utility/asnCertificate.cpp" />
-		<Unit filename="utility/asnCertificate.h" />
-		<Unit filename="utility/asnObject.cpp" />
-		<Unit filename="utility/asnObject.h" />
-		<Unit filename="utility/opensslObj.cpp" />
-		<Unit filename="utility/opensslObj.h" />
-		<Unit filename="utility/pkcs11module.cpp" />
-		<Unit filename="utility/pkcs11module.h" />
-		<Unit filename="utility/winInetObj.h" />
-		<Unit filename="wxprec.cpp" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
-	</Project>
-</CodeBlocks_project_file>
