@@ -1,311 +1,0 @@
-<?xml version="1.0" encoding="Windows-1252"?>
-<VisualStudioProject
-	ProjectType="Visual C++"
-	Version="8.00"
-	Name="EsteidUtil"
-	ProjectGUID="{8226B6E0-D407-8F4F-A48D-832392C8CF84}"
-	RootNamespace="EsteidUtil"
-	Keyword="Win32Proj"
-	>
-	<Platforms>
-		<Platform
-			Name="Win32"
-		/>
-	</Platforms>
-	<ToolFiles>
-	</ToolFiles>
-	<Configurations>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="."
-			IntermediateDirectory="obj\Debug"
-			ConfigurationType="1"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="0"	
-				AdditionalIncludeDirectories="../../../../../../../../../wxWidgets-2.8.4/include;.;../../../../../../../../../wxWidgets-2.8.4/lib/vc_lib/mswd"
-				PreprocessorDefinitions="WIN32;WIN32;_DEBUG;DEBUG"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
-				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="precompiled.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				ProgramDataBaseFileName="$(OutDir)\$(ProjectName).pdb"
-				DebugInformationFormat="4"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN32;WIN32;_DEBUG;DEBUG"
-				AdditionalIncludeDirectories="../../../../../../../../../wxWidgets-2.8.4/include;.;../../../../../../../../../wxWidgets-2.8.4/lib/vc_lib/mswd"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="cardlib\cardlib.lib utility\utility.lib crypt32.lib comctl32.lib Rpcrt4.lib wxbase28d.lib wxmsw28d_core.lib wxmsw28d_adv.lib wxjpegd.lib"
-				OutputFile="$(OutDir)\EsteidUtil.exe"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\..\..\..\..\..\..\..\wxWidgets-2.8.4\lib\vc_lib"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)\$(ProjectName).pdb"
-				SubSystem="2"
-				TargetMachine="1"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="."
-			IntermediateDirectory="obj\Release"
-			ConfigurationType="1"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="0"	
-				AdditionalIncludeDirectories="../../../../../../../../../wxWidgets-2.8.4/include;.;../../../../../../../../../wxWidgets-2.8.4/lib/vc_lib/msw"
-				PreprocessorDefinitions="WIN32;WIN32"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
-				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="precompiled.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				ProgramDataBaseFileName="$(OutDir)\$(ProjectName).pdb"
-				DebugInformationFormat="0"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN32;WIN32"
-				AdditionalIncludeDirectories="../../../../../../../../../wxWidgets-2.8.4/include;.;../../../../../../../../../wxWidgets-2.8.4/lib/vc_lib/msw"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="cardlib\cardlib.lib utility\utility.lib crypt32.lib comctl32.lib Rpcrt4.lib wxbase28.lib wxmsw28_core.lib wxmsw28_adv.lib wxjpeg.lib"
-				OutputFile="$(OutDir)\EsteidUtil.exe"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\..\..\..\..\..\..\..\wxWidgets-2.8.4\lib\vc_lib"
-				GenerateDebugInformation="false"
-				SubSystem="2"
-				TargetMachine="1"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-	</Configurations>
-	<References>
-	</References>
-	<Files>
-		<File
-			RelativePath="AppSetting.cpp"
-			>
-		</File>
-		<File
-			RelativePath="CertificateDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="DiagnosticsDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="EsteidUtil.cpp"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog_2.cpp"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog_Image.cpp"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog_Pin.cpp"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog_Windows.cpp"
-			>
-		</File>
-		<File
-			RelativePath="PersonalDataDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="PinChangeDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="PinChangeSecureDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="PinDialog.cpp"
-			>
-		</File>
-		<File
-			RelativePath="wxprec.cpp"
-			>
-			<FileConfiguration
-				Name="Debug|Win32"
-				>
-				<Tool
-					Name="VCCLCompilerTool"
-					UsePrecompiledHeader="1"
-				/>
-			</FileConfiguration>
-			<FileConfiguration
-				Name="Release|Win32"
-				>
-				<Tool
-					Name="VCCLCompilerTool"
-					UsePrecompiledHeader="1"
-				/>
-			</FileConfiguration>
-		</File>
-		<File
-			RelativePath="AppSetting.h"
-			>
-		</File>
-		<File
-			RelativePath="CertificateDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="DiagnosticsDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="MainDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="PersonalDataDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="PinChangeDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="PinChangeSecureDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="PinDialog.h"
-			>
-		</File>
-		<File
-			RelativePath="precompiled.h"
-			>
-		</File>
-		<File
-			RelativePath="resource.h"
-			>
-		</File>
-		<File
-			RelativePath="Setup.h"
-			>
-		</File>
-		<File
-			RelativePath="premake4.lua"
-			>
-		</File>
-	</Files>
-	<Globals>
-	</Globals>
-</VisualStudioProject>
